--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -56,6 +56,7 @@
 .prose ol > li {
   position: relative;
   padding-left: 1.75em;
+  color: var(--fg);
 }
 .prose ol > li::before {
   content: counter(list-item, var(--list-counter-style, decimal)) '.';
@@ -67,6 +68,7 @@
 .prose ul > li {
   position: relative;
   padding-left: 1.75em;
+  color: var(--fg);
 }
 .prose ul > li::before {
   content: '';
